k8s/billing.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing
  labels:
    app: billing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
      - name: billing
        image: dubec/saga_billing:0.0.6
        ports:
        - containerPort: 7878
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 7878
          successThreshold: 1
---
kind: Service
apiVersion: v1
metadata:
  name: billing-service
spec:
  selector:
    app: billing
  ports:
    - port: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health/
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /otusapp/(.*)/(.*)
            backend:
              service:
                name: billing-service
                port:
                  number: 7878
          - pathType: Prefix
            path: /health(/|$)(.*)
            backend:
              service:
                name: billing-service
                port:
                  number: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-billing-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /billing(/|$)(.*)
            backend:
              service:
                name: billing-service
                port:
                  number: 7878
