k8s/notifier.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
  labels:
    app: notifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
    spec:
      containers:
      - name: notifier
        image: dubec/notifier:0.0.4
        ports:
        - containerPort: 7829
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 7829
          successThreshold: 1
---
kind: Service
apiVersion: v1
metadata:
  name: notifier-service
spec:
  selector:
    app: notifier
  ports:
    - port: 7829
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifier-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health/
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /health(/|$)(.*)
            backend:
              service:
                name: notifier-service
                port:
                  number: 7829
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifier-notifier-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /notifier(/|$)(.*)
            backend:
              service:
                name: notifier-service
                port:
                  number: 7829
